# ohms-agent

./: Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json
.github/workflows/: ci.yml
src/: api.rs  lib.rs  ohms_agent.did
src/domain/: instruction.rs  mod.rs
src/infra/: guards.rs  metrics.rs
src/ohms-agent-backend/: Cargo.toml
src/services/: agent_factory.rs  binding.rs  cache.rs  dfinity_llm.rs  inference.rs  instruction_analyzer.rs  memory.rs  mod.rs  modelrepo.rs  novaq_validation.rs
