[package]
name = "ohms_agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-stable-structures = { workspace = true }

# DFINITY LLM integration
ic-llm = "0.3"
# OHMS dependencies (none required in agent for runtime)
